# falcon

./: LICENSE.txt  README.md  config.py  environment.yml  falcon.py  pyproject.toml  setup.cfg  wrapper.py
cluster/: cluster.py  spectrum.py
falcon/: __init__.py  config.py  falcon.py  seed.py  utils.py
falcon/cluster/: cluster.py  similarity.py  spectrum.py
falcon/ms_io/: mgf_io.py  ms_io.py  mzml_io.py  mzxml_io.py
ms_io/: mgf_io.py  ms_io.py  mzml_io.py  mzxml_io.py
spectrum/: spectrum.py
