[metadata]
name = falcon-ms
author = Wout Bittremieux
author_email = wbittremieux@health.ucsd.edu
description =  Large-scale tandem mass spectrum clustering using fast nearest neighbor searching
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bittremieux/falcon
project_urls =
    Bug Tracker = https://github.com/bittremieux/falcon/issues
license = BSD-3-Clause License
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: MacOS
    Operating System :: Unix
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
packages = find:
python_requires = >=3.8
install_requires =
    configargparse>=1.4
    faiss-cpu>=1.6.5
    joblib>=1.0.0
    lxml>=4.6.2
    natsort>=7.1.0
    numba>=0.52.0
    numpy>=1.19.4
    pandas>=1.2.0
    pyarrow>=2.0.0
    pyteomics>=4.4.0
    scikit-learn>=0.24.0
    scipy>=1.5.3
    spectrum_utils>=0.3.5
    tqdm>=4.55.0

[options.extras_require]
dev =
    flake8

[options.entry_points]
console_scripts =
    falcon = falcon.falcon:main

[flake8]
exclude = .git,__pycache__,old,build,dist
